# agent-in-docker

./: .gitignore  ARCHITECTURE_DECISIONS.md  CODE_REVIEW.md  Containerfile  Containerfile.base  PLAN.md  README.md  TUI_CONTROL_CENTER_PLAN.md  run-agent.sh  tickets.md
.beads/: .beads-credential-key  metadata.json
.claude/projects/-Users-maxsumme-Projects-agent-in-docker/memory/: project_devcontainer_inversion.md
.plans/: 1gd-ask-user-timeout.md  4ao-container-variants.md
bridge/: package-lock.json  package.json
bridge/src/: index.ts  mcp-server.ts  task-queue.ts  ws-client.ts
bridge/src/test/: ask-user.test.ts  fake-transport.ts  ws-client.test.ts
bridge/src/tools/: ask-user.ts  git-push.ts  read-host-file.ts
orchestrator/: Cargo.toml
orchestrator/crates/cli/: Cargo.toml
orchestrator/crates/cli/src/: config.rs  container.rs  login.rs  main.rs  services.rs
orchestrator/crates/core/: Cargo.toml
orchestrator/crates/core/src/: agent_manager.rs  lib.rs  mcp.rs  permissions.rs  project_config.rs  server.rs  types.rs
orchestrator/crates/core/src/handlers/: file_read.rs  git_push.rs  mod.rs
orchestrator/crates/core/tests/: integration_test.rs
orchestrator/crates/entrypoint/: Cargo.toml
orchestrator/crates/entrypoint/src/: main.rs  register.rs  setup.rs
orchestrator/crates/tui/: Cargo.toml
orchestrator/crates/tui/src/: app.rs  main.rs  ui.rs
roles/: _meta.md  architect.md  cleaner.md  code-agent.md  code-agent.yml  feature-producer.md  maintenance-producer.md  producer.md  review-agent.md  review-agent.yml
scripts/: entrypoint.sh  find-claude-keychain.sh
variants/: minimal.Containerfile  python-data.Containerfile  rust-dev.Containerfile
